# stacem

./: README.md  environment.yml  pyproject.toml  requirements.txt
src/usgs_stac/: catalog.py  collection.py  create.py  finalize.py  item.py  main.py  metadata_common.py
tests/: conftest.py  test_meta.py
