[project]
name = "stacem"
requires-python = ">=3.9"
description = "Create STAC from USGS WESM JSON url."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [ { name = "Kyle Mann", email = "kyle@hobu.co" } ]
maintainers = [ { name = "Kyle Mann", email = "kyle@hobu.co" } ]
dependencies = [ ]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/hobuinc/stacem"
repository = "https://github.com/hobuinc/stacem"

[tool.setuptools]
package-dir = {"" =  "src"}

[tool.setuptools.dynamic]
version = { attr = "usgs_stac.__version__" }
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
'stacem_create' = "usgs_stac.create:create_cmd"
'stacem_finalize' = "usgs_stac.finalize:finalize_cmd"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
